--- a/index.html
+++ b/index.html
@@ -4,25 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Dropbox</title>
 </head>
 <body>
     <!-- header -->
-    <header></header>
+    
+    <header class="d-flex justco-spacebtw aligit-center debug">
+        <ul class="d-flex justco-start debug">
+            <li><a href="#">lillo</a></li>
+            <li><a href="#">lillo</a></li>
+            <li><a href="#">lillo</a></li>
+            <li><a href="#">lillo</a></li>
+        </ul>
+        <ul class="d-flex justco-start debug">
+            <li><a href="#">lillo</a></li>
+            <li><a href="#">lillo</a></li>
+            <li><a href="#">lillo</a></li>
+            <li><a href="#">lillo</a></li>
+        </ul>
+    </header>
 
     <main>
         <!-- hero -->
+        <section id="hero">
+            <div class="container debug">hero</div>
+
+        </section>
+
+
         <!-- piani -->
+        <section id="plans">
+            <div class="inner-container debug">piani</div>
+            
+        </section>
         <!-- partner -->
+        <section id="partner">
+            <div class="inner-container debug">partner</div>
+        </section>
         <!-- strumenti -->
+        <section id="tools">
+            <div class="inner-container debug">strumenti</div>
+        </section>
+
         <!-- clienti (testo scopri+loghi clienti) -->
+        <section id="clients">
+            <div class="container debug">clienti</div>
+            <div id="clie-logos" class="debug">loghi clienti</div>
+        </section>
         <!-- prova gratuita -->
+        <section id="trial">
+            <div class="inner-container debug">prova gratis</div>
+        </section>
         <!-- faq -->
+        <section id="faq">
+            <div class="inner-container debug">faq</div>
+        </section>
     </main>
     <footer>
         <!-- link foote -->
+        <nav class="container debug">lista ancore footer</nav>
+
+
         <!-- lingue footer -->
+        <div class="container debug">lingue</div>
     </footer>
 
 </body>
