--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <body>
     <!-- header -->
     
-    <header class="d-flex justco-spacebtw aligit-center debug">
-        <ul class="d-flex justco-start debug">
-            <li><a href="#">lillo</a></li>
-            <li><a href="#">lillo</a></li>
-            <li><a href="#">lillo</a></li>
-            <li><a href="#">lillo</a></li>
+    <header class="d-flex justco-spacebtw aligcon-center">
+        <ul class="d-flex justco-start">
+            <li><a href="#"><img class="logo-head" src="./img/logo-small.png" alt="dropbox logo"></a></li>
+            <li><a href="#">Perché Dropbox</a></li>
+            <li><a href="#">Funzioni</a></li>
+            <li><a href="#">Piani e Prezzi</a></li>
         </ul>
-        <ul class="d-flex justco-start debug">
-            <li><a href="#">lillo</a></li>
-            <li><a href="#">lillo</a></li>
-            <li><a href="#">lillo</a></li>
-            <li><a href="#">lillo</a></li>
+        <ul class="d-flex justco-start">
+            <li><a href="#">Supporto</a></li>
+            <li><a href="#">Contatta l'ufficio vendite</a></li>
+            <li><a href="#">Accedi</a></li>
+            <li><a class="head-btn" href="#">Inizia</a></li>
         </ul>
     </header>
 
