add h1+ ul + hero img to hero

--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
     <main>
         <!-- hero -->
         <section id="hero">
-            <div class="container debug">hero</div>
+            <div class="container d-flex justco-start debug">
+                <h1 >Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="d-flex justco-start ">
+                    <ul class="hero-left debug">
+                        <li><p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p></li>
+                        <li><a class="blue-body-btn" href="#">inizia la tua prova gratuita</a></li>
+                        <li><p>Annulla in qualsiasi momento</p></li>
+                        <li><a href=""><i class="fa-solid fa-arrow-down"></i></a></li>
+                    </ul>
+                    <div class="hero-right debug">
+                        <img class="jumbo-img" src="./img/jumbo.png" alt="">
+                    </div>
+                </div>
+            </div>
+
 
         </section>
 
