fix hero img and text

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                         <li><p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p></li>
                         <li><a class="blue-body-btn" href="#">inizia la tua prova gratuita</a></li>
                         <li><p>Annulla in qualsiasi momento</p></li>
-                        <li><a href=""><i class="fa-solid fa-arrow-down"></i></a></li>
+                        <li><a class="black-text" href=""><i class="fa-solid fa-arrow-down"></i></a></li>
                     </ul>
+                    
                     <div class="hero-right debug">
                         <img class="jumbo-img" src="./img/jumbo.png" alt="">
                     </div>
@@ -71,7 +72,7 @@
             <div id="clie-logos" class="debug">loghi clienti</div>
         </section>
         <!-- prova gratuita -->
-        <section id="trial">
+        <section id="trial" class="debug">
             <div class="inner-container debug">prova gratis</div>
         </section>
         <!-- faq -->
