fix plans section

--- a/index.html
+++ b/index.html
@@ -64,75 +64,75 @@
                     <div class="plans-box">
                         <p class="title-pbox"><i class="fa-solid fa-user icon-rpad5"></i>Singolo</p>
                         <div class="padding30">
-                            <ul class="padding-b30">
+                            <ul class="margin-b60">
                                 <li><h2>Professional</h2></li>
                                 <li class="bold">€ 12.00</li>
                                 <li>/mese</li>
                             </ul>
-                            <ul class="padding-b30">
-                                <li><i class="fa-solid fa-user icon-rpad5"></i>1 utente</li>
-                                <li><i class="fa-solid fa-folder icon-rpad5"></i>5 tb di spazio sicuro</li>
-                                <li><i class="fa-solid fa-share-nodes icon-rpad5"></i>funzioni di produttivitá premium e condivisione file semplice e sicura</li>
+                            <ul class="margin-b60">
+                                <li class="fa-solid fa-user icon-rpad5 disp-block"><span>1 utente</span</li>
+                                <li class="fa-solid fa-folder icon-rpad5"><span>5 TB di spazio di archiviazione sicuro</span></li>
+                                <li class="fa-solid fa-share-nodes icon-rpad5"><span >funzioni di produttivitá premium e condivisione file semplice e sicura</span></li>
                             </ul>
-                            <ul class="text-interline padding-b30">
+                            <ul class="text-interline margin-tb25">
                                 <li><a class="blue-body-btn" href="#">prova gratis per 30 giorni</a></li>
-                                <li><span class="grey-break"> oppure </span><a href="#">acquista ora</a></li>
+                                <li class="margin-b60"><span class="grey-break"> oppure </span><a href="#">acquista ora</a></li>
                             </ul>
-                            <ul class="padding-b30">
+                            <ul>
                                 <li><h4>Punti salienti del piano</h4></li>
-                                <li><i class="fa-solid fa-check icon-rpad5"></i>Invia file fino a 100 GB con Dropbox Transfert</li>
-                                <li><i class="fa-solid fa-check icon-rpad5"></i>Cartelle offline su dispositivi mobili</li>
+                                <li class="fa-solid fa-check icon-rpad5"><span>Nessun limite di spazio per i file</span></li>
+                                <li class="fa-solid fa-check icon-rpad5"><span>Cartelle offline su dispositivi mobili</span></li>
                             </ul>
                         </div>
                     </div>
                     <div class="plans-box">
                         <p class="title-pbox"><i class="fa-solid fa-users icon-rpad5"></i>Team</p>
                         <div class="padding30">
-                            <ul class="padding-b30">
+                            <ul class="margin-b60">
                                 <li><h2>Advanced</h2></li>
                                 <li class="bold">€ 18.00</li>
                                 <li>/utente/mese</li>
                             </ul>
-                            <ul class="padding-b30">
-                                <li><i class="fa-solid fa-users icon-rpad5"></i>3 o più utenti</li>
-                                <li><i class="fa-solid fa-folder icon-rpad5"></i>Tutto lo spazio di cui ha bisogno il tuo team</li>
-                                <li><i class="fa-solid fa-share-nodes icon-rpad5"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
+                            <ul class="margin-b40">
+                                <li class="fa-solid fa-user icon-rpad5 disp-block"><span>3 o più utenti</span</li>
+                                <li class="fa-solid fa-folder icon-rpad5"><span>Tutto lo spazio di cui ha bisogno il tuo team</span></li>
+                                <li class="fa-solid fa-share-nodes icon-rpad5"><span >Sofisticate funzioni di controllo per tenere al sicuro tutti i file del tuo team</span></li>
                             </ul>
-                            <ul class="text-interline padding-b30">
+                            <ul class="text-interline margin-b60 ">
                                 <li><a class="blue-body-btn" href="#">prova gratis per 30 giorni</a></li>
                                 <li><span class="grey-break"> oppure </span><a href="#">acquista ora</a></li>
                             </ul>
-                            <ul class="padding-b30">
+                            <ul>
                                 <li><h4>Punti salienti del piano</h4></li>
-                                <li><i class="fa-solid fa-check icon-rpad5"></i>Nessun limite di spazio per i file</li>
-                                <li><i class="fa-solid fa-check icon-rpad5"></i>Cartelle offline su dispositivi mobili</li>
-                                <li><i class="fa-solid fa-check icon-rpad5"></i>Risparmio del 50% rispetto alle iscrizioni singole</li>
-                                <li><i class="fa-solid fa-check icon-rpad5"></i>Possibilità di inserire nuovi membri del team</li>
-                                <li><i class="fa-solid fa-check icon-rpad5"></i>Gestione dei permessi in base ai ruoli</li>
+                                <li class="fa-solid fa-check icon-rpad5"><span>Nessun limite di spazio per i file</span></li>
+                                <li class="fa-solid fa-check icon-rpad5"><span>Cartelle offline su dispositivi mobili</span></li>
+                                <li class="fa-solid fa-check icon-rpad5"><span>Risparmio del 50% rispetto alle iscrizioni singole</span></li>
+                                <li class="fa-solid fa-check icon-rpad5"><span>Possibilità di inserire nuovi membri del team</span</li>
+                                <li class="fa-solid fa-check icon-rpad5"><span>Gestione dei permessi in base ai ruoli</span></li>
                             </ul>
                         </div>
                     </div>
                     <div class="plans-box">
                         <p class="title-pbox"><i class="fa-solid fa-user icon-rpad5"></i>Singolo</p>
                         <div class="padding30">
-                            <ul class="padding-b30">
+                            <ul class="margin-b60">
                                 <li><h2>Professional</h2></li>
                                 <li class="bold">€ 12.00</li>
                                 <li>/mese</li>
                             </ul>
-                            <ul class="padding-b30">
-                                <li><i class="fa-solid fa-user icon-rpad5"></i>1 utente</li>
-                                <li><i class="fa-solid fa-folder icon-rpad5"></i>5 tb di spazio sicuro</li>
-                                <li><i class="fa-solid fa-share-nodes icon-rpad5"></i>funzioni di produttivitá premium e condivisione file semplice e sicura</li>
+                            <ul class="margin-b60">
+                                <li class="fa-solid fa-user icon-rpad5 disp-block"><span>1 utente</span</li>
+                                <li class="fa-solid fa-folder icon-rpad5"><span>5 tb di spazio sicuro</span></li>
+                                <li class="fa-solid fa-share-nodes icon-rpad5"><span >funzioni di produttivitá premium e condivisione file semplice e sicura</span></li>
                             </ul>
-                            <ul class="text-interline padding-b30">
+                            <ul class="text-interline margin-tb25">
                                 <li><a class="blue-body-btn" href="#">prova gratis per 30 giorni</a></li>
-                                <li><span class="grey-break"> oppure </span><a href="#">acquista ora</a></li>
+                                <li class="margin-b60"><span class="grey-break"> oppure </span><a href="#">acquista ora</a></li>
                             </ul>
-                            <ul class="padding-b30">
+                            <ul>
                                 <li><h4>Punti salienti del piano</h4></li>
-                                <li><i class="fa-solid fa-check icon-rpad5"></i>Invia file fino a 100 GB con Dropbox Transfert</li>
-                                <li><i class="fa-solid fa-check icon-rpad5"></i>Cartelle offline su dispositivi mobili</li>
+                                <li class="fa-solid fa-check icon-rpad5"><span>Nessun limite di spazio per i file</span></li>
+                                <li class="fa-solid fa-check icon-rpad5"><span>Cartelle offline su dispositivi mobili</span></li>
                             </ul>
                         </div>
                     </div>
