partner section complete

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
         <!-- piani -->
         <section id="plans">
-            <div class="inner-container margin-b150 debug">
-                <h2 class="padding-b30">Trova il piano business che fa per te</h2>
+            <div class="inner-container margin-b150">
+                <h1 class="plans-title padding-b30">Trova il piano business che fa per te</h1>
                 <div class="d-flex gap-flex padding-b30">
                     <p>Fatturazione mensile</p>
                     <p>Fatturazione annuale</p>
@@ -131,8 +131,8 @@
                             </ul>
                             <ul>
                                 <li><h4>Punti salienti del piano</h4></li>
-                                <li class="fa-solid fa-check icon-rpad5"><span>Nessun limite di spazio per i file</span></li>
-                                <li class="fa-solid fa-check icon-rpad5"><span>Cartelle offline su dispositivi mobili</span></li>
+                                <li class="fa-solid fa-check icon-rpad5 "><span>Nessun limite di spazio per i file</span></li>
+                                <li class="fa-solid fa-check icon-rpad5 "><span>Cartelle offline su dispositivi mobili</span></li>
                             </ul>
                         </div>
                     </div>
@@ -141,9 +141,9 @@
                     <p class="title-pbox"><i class="fa-solid fa-building icon-rpad5"></i>Team</p>
                     <div class="d-flex aligit-center">
                         <div class="team-left padding30">
-                            <h2>Enterprise</h2>
-                            <p>Contatta l'ufficio vendite per i prezzi</p>
-                            <p>soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
+                            <h2 class="padding-b20">Enterprise</h2>
+                            <p class="bold margin-b40"> Contatta l'ufficio vendite per i prezzi</p>
+                            <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
                         </div>
                         <div class="team-right padding30"><a class="blue-body-btn" href="#">Contatta l'ufficio vendite</a></div>
                     </div>
@@ -153,7 +153,16 @@
         </section>
         <!-- partner -->
         <section id="partner">
-            <div class="inner-container margin-b150 debug">partner</div>
+            <div class="inner-container d-flex margin-b150">
+                <div class="partn-left">
+                    <img class="partn-img" src="./img/partner.png" alt="">
+                </div>
+                <div class="partn-right d-flex aligcon-start">
+                    <h2 class="padding-b30">Entra in contatto con un partner Dropbox</h2>
+                    <p class="margin-b40">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizzi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <a class="partn-btn" href="#">Trova un partner</a>
+                </div>
+            </div>s
         </section>
         <!-- strumenti -->
         <section id="tools">
