--- a/index.html
+++ b/index.html
@@ -162,11 +162,46 @@
                     <p class="margin-b40">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizzi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
                     <a class="partn-btn" href="#">Trova un partner</a>
                 </div>
-            </div>s
+            </div>
         </section>
         <!-- strumenti -->
         <section id="tools">
-            <div class="inner-container margin-b150 debug">strumenti</div>
+            <div class="inner-container margin-b150">
+                <h1>Esegui più operazioni con Dropbox Business</h1>
+                <div class="d-flex justco-spacebtw gap-20">
+                    <div class="tools-box">
+                        <img class="partn-img" src="./img/business-feature-switching-tools.png" alt="strumenti">
+                        <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="tools-box">
+                        <img class="partn-img" src="./img/business-feature-send-files-it.png" alt="strumenti">
+                        <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="tools-box">
+                        <img class="partn-img" src="./img/business-feature-coordinate-it.png" alt="strumenti">
+                        <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="tools-box">
+                        <img class="partn-img" src="./img/business-feature-integrations-it.png" alt="strumenti">
+                        <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="tools-box">
+                        <img class="partn-img" src="./img/business-feature-multi-device.png" alt="strumenti">
+                        <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="tools-box">
+                        <img class="partn-img" src="./img/business-feature-security.png" alt="strumenti">
+                        <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
+                        <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                </div>
+                
+            </div>
         </section>
 
         <!-- clienti (testo scopri+loghi clienti) -->
