fix img codes = ad structure client sec + bgs

--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
         <section id="partner">
             <div class="inner-container d-flex margin-b150">
                 <div class="partn-left">
-                    <img class="partn-img" src="./img/partner.png" alt="">
+                    <img class="img-100" src="./img/partner.png" alt="">
                 </div>
                 <div class="partn-right d-flex aligcon-start">
                     <h2 class="padding-b30">Entra in contatto con un partner Dropbox</h2>
                     <p class="margin-b40">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizzi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
-                    <a class="partn-btn" href="#">Trova un partner</a>
+                    <a class="img-100" href="#">Trova un partner</a>
                 </div>
             </div>
         </section>
@@ -170,32 +170,32 @@
                 <h1>Esegui più operazioni con Dropbox Business</h1>
                 <div class="d-flex justco-spacebtw gap-20">
                     <div class="tools-box">
-                        <img class="partn-img" src="./img/business-feature-switching-tools.png" alt="strumenti">
+                        <img class="img-100" src="./img/business-feature-switching-tools.png" alt="strumenti">
                         <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
                         <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                     </div>
                     <div class="tools-box">
-                        <img class="partn-img" src="./img/business-feature-send-files-it.png" alt="strumenti">
+                        <img class="img-100" src="./img/business-feature-send-files-it.png" alt="strumenti">
                         <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
                         <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                     </div>
                     <div class="tools-box">
-                        <img class="partn-img" src="./img/business-feature-coordinate-it.png" alt="strumenti">
+                        <img class="img-100" src="./img/business-feature-coordinate-it.png" alt="strumenti">
                         <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
                         <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                     </div>
                     <div class="tools-box">
-                        <img class="partn-img" src="./img/business-feature-integrations-it.png" alt="strumenti">
+                        <img class="img-100" src="./img/business-feature-integrations-it.png" alt="strumenti">
                         <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
                         <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                     </div>
                     <div class="tools-box">
-                        <img class="partn-img" src="./img/business-feature-multi-device.png" alt="strumenti">
+                        <img class="img-100" src="./img/business-feature-multi-device.png" alt="strumenti">
                         <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
                         <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                     </div>
                     <div class="tools-box">
-                        <img class="partn-img" src="./img/business-feature-security.png" alt="strumenti">
+                        <img class="img-100" src="./img/business-feature-security.png" alt="strumenti">
                         <h2 class="padding-b20">Passa di meno da uno strumento all'altro</h2>
                         <p class="padding-b30">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                     </div>
@@ -206,8 +206,25 @@
 
         <!-- clienti (testo scopri+loghi clienti) -->
         <section id="clients">
-            <div class="container margin-b150 debug">clienti</div>
-            <div id="clie-logos" class="debug">loghi clienti</div>
+            <div class="container debug">
+                <h1>Più di 500.000 team utilizzano Dropbox Business</h1>
+                <a href="#">Scopri di più sui nostri clienti</a>
+            </div>
+            <div class="d-flex debug">
+                <div class="bigbox-clie d-flex debug">
+                    <div class="smallbox-clie green-logo debug"></div>
+                    <div class="smallbox-clie bordeau-logo debug">bordeaux</div>
+                    <div class="smallbox-clie lightblue-logo debug">lightblue</div>
+                    <div class="smallbox-clie red-logo debug">red</div>
+                </div>
+                <div class="bigbox-clie d-flex biggrey-logo debug">fsefsef</div>
+                <div class="bigbox-clie d-flex debug">
+                    <div class="smallbox-clie darkred-logo debug"></div>
+                    <div class="smallbox-clie lightgrey-logo debug"></div>
+                    <div class="smallbox-clie darkblue-logo debug"></div>
+                    <div class="smallbox-clie yellow-logo debug"></div>
+                </div>
+            </div> 
         </section>
         <!-- prova gratuita -->
         <section id="trial" class="margin-b150 debug">
