--- a/index.html
+++ b/index.html
@@ -212,17 +212,37 @@
             </div>
             <div class="d-flex debug">
                 <div class="bigbox-clie d-flex debug">
-                    <div class="smallbox-clie green-logo debug"></div>
-                    <div class="smallbox-clie bordeau-logo debug">bordeaux</div>
-                    <div class="smallbox-clie lightblue-logo debug">lightblue</div>
-                    <div class="smallbox-clie red-logo debug">red</div>
+                    <div class="smallbox-clie d-flex green-logo debug">
+                        <img class="clients-logos img-100" src="./img/designit.svg" alt="designit logo">
+                    </div>
+                    <div class="smallbox-clie d-flex bordeau-logo debug">
+                        <img class="clients-logos img-100" src="./img/arizona_state_university.svg" alt="arizona state university logo">
+                    </div>
+                        
+                    <div class="smallbox-clie d-flex aligit-center lightblue-logo debug">
+                        <img class="clients-logos" src="./img/university_of_florida.svg" alt="university of florida">
+                    </div>
+                        
+                    <div class="smallbox-clie d-flex red-logo debug">
+                        <img class="clients-logos img-100" src="./img/topps.svg" alt="toops logo">
+                    </div>
                 </div>
-                <div class="bigbox-clie d-flex biggrey-logo debug">fsefsef</div>
+                <div class="bigbox-clie d-flex biggrey-logo debug">
+                    <img src="" alt="">
+                </div>
                 <div class="bigbox-clie d-flex debug">
-                    <div class="smallbox-clie darkred-logo debug"></div>
-                    <div class="smallbox-clie lightgrey-logo debug"></div>
-                    <div class="smallbox-clie darkblue-logo debug"></div>
-                    <div class="smallbox-clie yellow-logo debug"></div>
+                    <div class="smallbox-clie d-flex darkred-logo debug">
+                        <img class="clients-logos img-100" src="./img/world_bicycle_relief.svg" alt="world bicycle logo">
+                    </div>
+                    <div class="smallbox-clie d-flex lightgrey-logo debug">
+                        <img class="clients-logos img-100" src="./img/hearst_corp.svg" alt="hearst corp logo">
+                    </div>
+                    <div class="smallbox-clie d-flex darkblue-logo debug">
+                        <img class="clients-logos img-100" src="./img/lonely_planet.svg" alt="lonely planet logo">
+                    </div>
+                    <div class="smallbox-clie d-flex yellow-logo debug">
+                        <img class="clients-logos img-100" src="./img/clear_channel.svg" alt="clear channel logo">
+                    </div>
                 </div>
             </div> 
         </section>
