trial section complete

--- a/index.html
+++ b/index.html
@@ -253,8 +253,14 @@
             </div> 
         </section>
         <!-- prova gratuita -->
-        <section id="trial" class="margin-b150 debug">
-            <div class="inner-container debug">
+        <section id="trial" class="margin-b150">
+            <div class="inner-container d-flex">
+                <div class="trial-left d-flex aligcon-center">
+                    <h2>Porta Dropbox Business nella tua azienda.</h2>
+                </div>
+                <div class="trial-right d-flex aligcon-center justco-end">
+                    <a class="trial-btn" href="#">Inizia la tua prova gratuita</a>
+                </div>
             
             </div>
         </section>
