footer added and complete

--- a/index.html
+++ b/index.html
@@ -298,13 +298,75 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="footer">
         <!-- link foote -->
-        <nav class="container debug">lista ancore footer</nav>
+        <nav class="container pad-b100 pad-t100 d-flex justco-spacebtw gap-20 ">
+            <div class="footer-text ">
+                <h2 class="padding-b20">Dropbox</h2>
+                <ul>
+                    <li><a href="#">Applicazione desktop</a></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                </ul>
+            </div>
+            <div class="footer-text ">
+                <h2 class="padding-b20">Prodotti</h2>
+                <ul>
+                    <li><a href="#">Applicazione desktop</a></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                </ul>
+            </div>
+            <div class="footer-text ">
+                <h2 class="padding-b20">Azienda</h2>
+                <ul>
+                    <li><a href="#">Applicazione desktop</a></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                </ul>
+            </div>
+            <div class="footer-text ">
+                <h2 class="padding-b20">Supporto</h2>
+                <ul>
+                    <li><a href="#">Applicazione desktop</a></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                </ul>
+            </div>
+            <div class="footer-text ">
+                <h2 class="padding-b20">Community</h2>
+                <ul>
+                    <li><a href="#">Applicazione desktop</a></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                </ul>
+            </div>
+        </nav>
 
 
         <!-- lingue footer -->
-        <div class="container debug">lingue</div>
+        <div class="container ">
+            <div class="lang-box">
+                <i class="fa-solid fa-earth-americas"></i>
+                <select>
+                    <option value="1">Italiano</option>
+                    <option value="2">English</option>
+                    <option value="4">Russian</option>
+                    <option value="5">Deutch</option>
+                    <option value="6">Spanish</option>
+                  </select>
+            </div>
+        </div>
     </footer>
 
 </body>
