add header hover eff. + all btn hover+clielogo hov

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <header class="d-flex justco-spacebtw aligcon-center">
         <ul class="d-flex justco-start">
             <li><a href="#"><img class="logo-head" src="./img/logo-small.png" alt="dropbox logo"></a></li>
-            <li><a href="#">Perché Dropbox</a></li>
-            <li><a href="#">Funzioni</a></li>
-            <li><a href="#">Piani e Prezzi</a></li>
+            <li><a class="head-bord" href="#"><span class="nav-bordbot">Perché Dropbox</span></a></li>
+            <li><a class="head-bord" href="#"><span class="nav-bordbot">Funzioni </span></a></li>
+            <li><a class="head-bord" href="#"><span class="nav-bordbot">Piani e Prezzi </span></a></li>
         </ul>
         <ul class="d-flex justco-start">
-            <li><a href="#">Supporto</a></li>
-            <li><a href="#">Contatta l'ufficio vendite</a></li>
-            <li><a href="#">Accedi</a></li>
-            <li><a class="head-btn" href="#">Inizia</a></li>
+            <li><a class="head-bord" href="#"><span class="nav-bordbot">Supporto </span></a></li>
+            <li><a class="head-bord" href="#"><span class="nav-bordbot">Contatta l'ufficio vendite </span></a></li>
+            <li><a class="head-bord" href="#"><span class="nav-bordbot">Accedi </span></a></li>
+            <li><a class="head-btn bluebtn-hov" href="#">Inizia</a></li>
         </ul>
     </header>
 
@@ -259,7 +259,7 @@
                     <h2>Porta Dropbox Business nella tua azienda.</h2>
                 </div>
                 <div class="trial-right d-flex aligcon-center justco-end">
-                    <a class="trial-btn" href="#">Inizia la tua prova gratuita</a>
+                    <a class="trial-btn " href="#">Inizia la tua prova gratuita</a>
                 </div>
             
             </div>
