added input btn to plans

--- a/index.html
+++ b/index.html
@@ -57,8 +57,16 @@
             <div class="inner-container margin-b150">
                 <h1 class="plans-title padding-b30">Trova il piano business che fa per te</h1>
                 <div class="d-flex gap-flex padding-b30">
-                    <p>Fatturazione mensile</p>
-                    <p>Fatturazione annuale</p>
+                    <div>
+                        <input type="radio" name="#" value="mensile">
+                        <label class="" for="mesile">Fatturazione mensile</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="#" value="annuale">
+                        <label class="" for="mesile">Fatturazione annuale</label>
+                    </div>
+
+                    <!-- <p>Fatturazione annuale</p> -->
                 </div>
                 <div class="no-wrap-flex justco-spacebtw gap-flex">
                     <div class="plans-box">
