--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                 <div class="d-flex gap-flex padding-b30">
                     <div>
                         <input type="radio" name="#" value="mensile">
-                        <label class="" for="mesile">Fatturazione mensile</label>
+                        <labelfor="mesile">Fatturazione mensile</label>
                     </div>
                     <div>
                         <input type="radio" name="#" value="annuale">
-                        <label class="" for="mesile">Fatturazione annuale</label>
+                        <label for="mesile">Fatturazione annuale</label>
                     </div>
 
-                    <!-- <p>Fatturazione annuale</p> -->
+
                 </div>
                 <div class="no-wrap-flex justco-spacebtw gap-flex">
                     <div class="plans-box">
